--- a/figures/07_model-selection_nolulc.Rmd
+++ b/figures/07_model-selection_nolulc.Rmd
@@ -34,32 +34,16 @@ hu4 <- dplyr::left_join(hu4,
                                  hu4_zoneid, .keep_all = TRUE), 
                         by = c("ZoneID" = "hu4_zoneid"))
 
-re_brms        <- readRDS("../data/mcmc/re_brms.rds")
+re_brms        <- readRDS("../data/mcmc/fe_brms_nolulc.rds")
 pred_key       <- read.csv("../data/predictor_key.csv", stringsAsFactors = FALSE)
 ```
 
-```{r re_global}
-# tp, tn
-# ag, row_crop, pasture, corn, soybeans
-re_global          <- dplyr::rbind_all(lapply(re_brms, function(x) x$re_global))
-re_global$term     <- unlist(lapply(re_brms, 
-                                function(x) get_re_text(as.character(x$formula)[1])))
-re_global$response <- c(rep("tp", nrow(re_global) / 2), rep("tn", nrow(re_global) / 2))
-re_global          <- left_join(re_global, pred_key, by = c("term" = "var")) %>%
-  dplyr::select(pretty, `5%`:`95%`, term, response)
-# re_global <- dplyr::filter(re_global, term != "rowvcropvpct")
-# group_by(re_global, response) %>%
-#   arrange(desc(`50%`))
-```
-
 ```{r pre_tp_fe, out.width="3.45in", out.height="4in"}
-# lapply(re_brms, function(x) x$R2)
-# lapply(re_brms, function(x) x $formula) 
-# re_brms[[2]]$formula
-best_tp        <- 2 # 2 is best tp model with random effects
+responses <- unlist(lapply(re_brms, function(x){
+  get_re_response(as.character(x$formula)[1])}))
+
+best_tp        <- which(responses == "tp")
 fit_tp         <- re_brms[[best_tp]] 
-signif_hu4_ids <- fit_tp$re_signif_ids 
-signif_hu4     <- dplyr::filter(hu4, ZoneID %in% signif_hu4_ids)
 
 # plot tp model fixed effects summary
 # summary(fit_tp)
@@ -77,11 +61,6 @@ gg_tp <- spread_draws(fit_tp, `b_.*`, regex = TRUE) %>%
   summarize(value = list(tibble::enframe(
     quantile(value, probs=c(0.05,0.5,0.95))))) %>% unnest() %>%
   tidyr::spread(name, value) %>%
-  dplyr::bind_rows(
-    dplyr::select(re_global[best_tp,], -term, -response), 
-    data.frame(pretty = "", `5%` = "", `50%` = "", `95%` = "", 
-               stringsAsFactors = FALSE)
-    ) %>%
   rowwise() %>%
   mutate(signif = (`5%` > 0 & `95%` > 0)| (`5%` < 0 & `95%` < 0)) %>%
   left_join(dplyr::select(pred_key, pretty, category)) %>%
@@ -103,10 +82,8 @@ gg_tp <- spread_draws(fit_tp, `b_.*`, regex = TRUE) %>%
 # re_brms[[8]]$formula
 # brms::bayes_R2(re_brms[[8]])
   
-best_tn        <- 8 # 11 is best tn model with random effects
+best_tn        <- which(responses == "tn")
 fit_tn         <- re_brms[[best_tn]] 
-signif_hu4_ids <- fit_tn$re_signif_ids 
-signif_hu4     <- dplyr::filter(hu4, ZoneID %in% signif_hu4_ids)
 
 # plot tn model fixed effects summary
 # summary(fit_tn)
@@ -119,11 +96,6 @@ gg_tn <- spread_draws(fit_tn, `b_.*`, regex = TRUE) %>%
   summarize(value = list(tibble::enframe(
     quantile(value, probs=c(0.05,0.5,0.95))))) %>% unnest() %>%
   tidyr::spread(name, value) %>%
-  dplyr::bind_rows(
-    dplyr::select(re_global[best_tn,], -term, -response), 
-    data.frame(pretty = "", `5%` = "", `50%` = "", `95%` = "", 
-               stringsAsFactors = FALSE)
-    ) %>%
   rowwise() %>%
   mutate(signif = (`5%` > 0 & `95%` > 0)| (`5%` < 0 & `95%` < 0)) %>%
   left_join(dplyr::select(pred_key, pretty, category)) %>%
@@ -156,7 +128,7 @@ x_min <- c(gg_tp$`5%`, gg_tn$`5%`)[which.min(c(gg_tp$`5%`, gg_tn$`5%`))]
                         x_min, x_max, "TN"))
 ```
 
-```{r fe}
+```{r fe_nolulc}
 cowplot::plot_grid(
 cowplot::plot_grid(
   equalize_panels(
@@ -172,669 +144,4 @@ ggplot(data.frame(x = 1, y = 1, label = "Standardized coefficients", stringsAsFa
   geom_text(aes(x = x, y = y, label = label)) +
   theme_void(),
 ncol = 1, rel_heights = c(1, 0.05))
-```
-
-```{r tp_re, fig.width=3.25, fig.height=4.5}
-fit_tp$re$hu4vzoneid <- gsub("HU4_", "", fit_tp$re$hu4vzoneid)
-fit_tp$re <- fit_tp$re %>%
-  mutate_at(vars(matches("%")), function(x) x + 
-              as.numeric(fit_tp$re_global["50%"]))
-
-
-gg_tp_re <- ggplot(data = fit_tp$re) +
-  geom_pointrange(aes(x = hu4vzoneid, y = `50%`, 
-                      ymin = `5%`, ymax = `95%`, color = signif)) +
-  scale_color_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
-  geom_hline(yintercept = as.numeric(fit_tp$re_global["50%"])) +
-  coord_flip() +
-  cowplot::theme_cowplot() +
-  theme(rect = element_rect(fill = "transparent")) +
-  ggtitle("TP") + xlab("Zone ID") +
-  theme(plot.title = element_text(hjust = 0.5, face = "bold")) +
-  theme(legend.position = 0)
-
-gg_tp_re
-```
-
-```{r tn_re_hu4, fig.width = 3.77, fig.height = 4.5}
-# setwd("figures")
-study_bbox    <- st_read("../data/gis.gpkg", "study_bbox", quiet = TRUE)[3,]
-states_all    <- st_read("../data/gis.gpkg", "states_all", quiet = TRUE)
-hu4_all       <- st_read("../data/gis.gpkg", "hu4s_focal", quiet = TRUE)
-hu4_all       <- st_crop(hu4_all, st_transform(study_bbox, st_crs(hu4_all)))
-
-# map significant random effects hu4s
-gg_hu4 <- 
-  ggplot() +
-    geom_sf(data = study_bbox, alpha = 1, size = 0.6, 
-              color = "black", fill = "#1D9DCF") +
-    geom_sf(data = states_all, fill = "gray", color = "black", size = 0.3) +
-    geom_sf(data = hu4_all, fill = "white", color = "black", size = 0.4) +
-    geom_sf(data = signif_hu4, color = "red", alpha = 0) +
-    # geom_text(data = coords, aes(x = x, y = y, label = ZoneID)) +   
-    coord_sf(datum = NA) +
-    theme_minimal() + 
-    theme(legend.position = "bottom", 
-          axis.title = element_blank(), 
-          legend.title = element_blank()) + 
-    scale_fill_manual(values = colors, levels(hu4$n_cat)) + 
-    guides(guide_legend(nrow = 2))  # +
-  # ggtitle("Ag sensitive regions")
-
-gg_hu4
-```
-
-```{r tn_re, fig.width=3.25, fig.height=4.5}
-# dotplot tn hu4 random effects
-fit_tn$re$hu4vzoneid <- gsub("HU4_", "", fit_tn$re$hu4vzoneid)
-fit_tn$re <- fit_tn$re %>%
-  mutate_at(vars(matches("%")), function(x) x + 
-              as.numeric(fit_tn$re_global["50%"]))
-
-gg_tn_re <- ggplot(data = fit_tn$re) +
-  geom_hline(yintercept = as.numeric(fit_tn$re_global["50%"])) +
-  geom_pointrange(aes(x = hu4vzoneid, y = `50%`, 
-                      ymin = `5%`, ymax = `95%`, color = signif)) +
-  scale_color_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
-  coord_flip() +
-  cowplot::theme_cowplot() +
-  theme(rect = element_rect(fill = "transparent")) +
-  ggtitle("TN") + xlab("Zone ID") +
-  theme(plot.title = element_text(hjust = 0.5, face = "bold")) +
-  theme(legend.position = 0)
-
-```
-
-```{r tn_re_compare, fig.height=3, fig.width=4}
-# compare lakes in signif hu4s
-dt        <- readRDS("../data/dt_scaled.rds") %>%
-  mutate(signif_hu4 = hu4_zoneid %in% signif_hu4_ids) %>%
-  tidyr::gather(key = "key", value = "value", 
-                      -lagoslakeid, -hu4_zoneid, -hu12_zoneid, -signif_hu4) %>%
-  group_by(key, signif_hu4) %>%
-  mutate(median = median(value, na.rm = TRUE))
-
-dt_predictors <- dplyr::filter(dt, key %in% 
-                                 c(#"tp",
-                                   "nitrogen_atmospheric_deposition",
-                                   "clay_pct")) %>%
-  dplyr::left_join(pred_key, by = c("key" = "var"))
-dt_predictors[is.na(dt_predictors$pretty), "pretty"] <- 
-  sapply(dt_predictors[is.na(dt_predictors$pretty), "key"], toupper)
-
-dt_modelled <- dplyr::filter(dt, key %in% 
-                               c("maxdepth", "tn", "soil_org_carbon",
-                                 "buffer_cultivated_crops", "corn",
-                                 "nitrogen_fertilizer_use"))
-
-gg_hist <- ggplot(data = dt_predictors) + 
-  geom_histogram(aes(x = value, fill = signif_hu4), alpha = 0.7) +
-  geom_vline(aes(xintercept = median, color = signif_hu4), 
-             linetype = "dashed") +
-  scale_fill_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
-  scale_color_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
-  cowplot::theme_cowplot() +
-  theme(legend.position = 0) +
-  theme(rect = element_rect(fill = "transparent"), 
-        strip.background = element_rect(fill = "transparent"), 
-        strip.text = element_text(face = "bold")) +
-  facet_wrap(~pretty) +
-  xlab("Standardized value")
-
-# line graph tn vs tp
-dt        <- readRDS("../data/dt_scaled.rds") %>%
-  mutate(signif_hu4 = hu4_zoneid %in% signif_hu4_ids) %>%
-  tidyr::gather(key = "key", value = "value", 
-                      -lagoslakeid, -hu4_zoneid, -hu12_zoneid, -signif_hu4, -tn) %>%
-  dplyr::filter(key %in% c(c("tp"))) %>%
-  tidyr::spread(key, value)
-
-gg_tp <- ggplot(data = dt) + 
-  geom_point(aes(x = tp, y = tn, color = signif_hu4)) +
-  geom_line(stat = "smooth", method = lm, se = FALSE, 
-            aes(x = tp, y = tn, color = signif_hu4)) +
-  scale_fill_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
-  scale_color_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
-  cowplot::theme_cowplot() +
-  theme(legend.position = 0) + 
-  theme(rect = element_rect(fill = "transparent"))
-
-plot_grid(gg_hist, nrow = 1)
-# plot_grid(gg_hist, gg_tp, nrow = 2)
-
-lg <- lagosne_load("1.087.1")
-gg_line <- fit_tn$re %>%
-  ungroup() %>%
-  mutate(hu4vzoneid = paste0("HU4_", hu4vzoneid)) %>%
-  left_join(dplyr::select(lg$hu4.chag, 
-                          hu4_zoneid, hu4_dep_totaln_2010_mean), 
-            by = c("hu4vzoneid" = "hu4_zoneid")) %>%
-ggplot() +
-  geom_pointrange(aes(x = hu4_dep_totaln_2010_mean, y = `50%`,
-                      ymin = `5%`, ymax = `95%`, color = signif)) +
-  scale_color_manual(values = c("FALSE" = "black", "TRUE" = "red")) +
-  theme_cowplot() +
-  ylab("TN model, corn RE slope") + xlab("N deposition") +
-  cowplot::theme_cowplot() +
-  theme(legend.position = 0) + 
-  theme(rect = element_rect(fill = "transparent"))
-
-gg_tn_re
-
-# gg_line
-
-```
-
-```{r re}
-cowplot::plot_grid(
-cowplot::plot_grid(gg_tp_re + theme(axis.title.x = element_blank(), 
-                                     plot.margin = unit(c(0,0,0,0), "cm")),
-                   gg_tn_re + theme(axis.text.y = element_blank(), 
-                                    axis.title.y = element_blank(), 
-                                    axis.title.x = element_blank(),
-                                    plot.margin = unit(c(0,0,0,0), "cm")), 
-                   rel_widths = c(1, 0.9)), 
-ggplot(data.frame(x = 0, y = 0, label = "Standardized coefficients", stringsAsFactors = FALSE)) + 
-  geom_text(aes(x = x, y = y, label = label), size = 5) +
-  theme_void() + 
-  theme(plot.margin = unit(c(0,0,0,0), "cm")),
-ncol = 1, rel_heights = c(1, 0.05))
-
-cowplot::plot_grid(gg_tp_re, 
-                   gg_tn_re + 
-                     theme(axis.text.y = element_blank(), 
-                           axis.title.y = element_blank()) + 
-                     gghighlight(max(`50%`), n = 1), 
-                   rel_widths = c(1, 0.9))
-```
-
-```{r re-comparison, fig.width=4}
-re_global <- dplyr::filter(re_global, term != "rowvcropvpct")
-gg_tn <- ggplot(data = dplyr::filter(re_global, response == "tn")) +
-    geom_pointrange(aes(x = term, y = `50%`, 
-                      ymin = `5%`, ymax = `95%`), color = "red") +
-  geom_hline(yintercept = 0, linetype = "dashed") +
-  expand_limits(y = c(-0.2, 0.5)) +
-  coord_flip() +
-  theme(axis.title.y = element_blank(),
-        axis.title.x = element_blank(),
-        strip.placement = "outside", 
-        strip.background = element_blank(), 
-        panel.background = element_rect(fill = "transparent", color = NA),
-        plot.background = element_rect(fill = "transparent", color = NA), 
-        panel.grid = element_blank(),
-        rect = element_rect(fill = "transparent"), 
-        axis.line = element_line(), 
-        axis.text.y = element_blank()) +
-  ggtitle("TN") + 
-  theme(plot.title = element_text(hjust = 0.5, face = "bold"))
-
-gg_tp <- ggplot(data = dplyr::filter(re_global, response == "tp")) +
-    geom_pointrange(aes(x = term, y = `50%`, 
-                      ymin = `5%`, ymax = `95%`), color = "red") +
-  geom_hline(yintercept = 0, linetype = "dashed") +
-  expand_limits(y = c(-0.2, 0.5)) +
-  coord_flip() +
-  theme(axis.title.y = element_blank(),
-        axis.title.x = element_blank(),
-        strip.placement = "outside", 
-        strip.background = element_blank(), 
-        panel.background = element_rect(fill = "transparent", color = NA),
-        plot.background = element_rect(fill = "transparent", color = NA), 
-        panel.grid = element_blank(),
-        rect = element_rect(fill = "transparent"), 
-        axis.line = element_line()) +
-  ggtitle("TP") + 
-  theme(plot.title = element_text(hjust = 0.5, face = "bold"))
-
-cowplot::plot_grid(
-cowplot::plot_grid(gg_tp, gg_tn, rel_widths = c(1, 0.75)),
-ggplot(data.frame(x = 1, y = 1, label = "Standardized coefficients", stringsAsFactors = FALSE)) + 
-  geom_text(aes(x = x, y = y, label = label)) +
-  theme_void(),
-ncol = 1, rel_heights = c(1, 0.05))
-```
-
-```{r tn_interaction, eval=FALSE}
-# lapply(re_brms, function(x) x$formula) 
-fit <- re_brms[[6]]
-fit$formula
-head(fit$res_med)
-test <- readRDS("../data/dt_scaled.rds") %>%
-  dplyr::select(lagoslakeid, hu4_nitrogen_atmospheric_deposition, corn, 
-                maxdepth, soil_org_carbon, 
-                nitrogen_fertilizer_use, buffer_cultivated_crops) %>%
-  left_join(fit$res_med)
-
-cor.test(test$.residual_median, test$hu4_nitrogen_atmospheric_deposition * test$soil_org_carbon)
-abline(0, 1)
-```
-
-
-```{r 07_model_selection, fig.height=3, echo=FALSE, fig.width=6, eval=FALSE}
-# gg_hu4_ndep <- ggplot() +
-#     geom_sf(data = hu4, aes(fill = hu4_nitrogen_atmospheric_deposition)) +
-#     geom_sf(data = signif_hu4, color = "red", alpha = 0) +
-#     theme_minimal() + 
-#     theme(legend.position = "bottom", 
-#           axis.title = element_blank(), 
-#           legend.title = element_blank()) +
-#   ggtitle("N Deposition")
-
-# gg_hu4_clay <- ggplot() +
-#     geom_sf(data = hu4, aes(fill = hu4_clay_pct)) +
-#     theme_minimal() + 
-#     theme(legend.position = "bottom", 
-#           axis.title = element_blank(), 
-#           legend.title = element_blank())
-
-# hist(hu4$n, n = 20)
-# table(as.character(dt$hu4_zoneid))
-
-# hist(as.vector(table(dt$hu4_zoneid)))  
-# good_hu4s <- group_by(dt, hu4_zoneid) %>% 
-#   tally() %>%
-#   dplyr::filter(n > 220)  
-# dt <- dplyr::filter(dt, hu4_zoneid %in% good_hu4s$hu4_zoneid)
-# dt <- dplyr::filter(dt, tp < 500 & chla < 150)
-
-# create alpha sample size weightings
-# dt <- left_join(dt, ungroup(count(group_by(dt, hu4_zoneid))), 
-#                 by = "hu4_zoneid") %>%
-#   dplyr::filter(n >= 3) %>%
-#   mutate(n = n / max(n, na.rm = TRUE))
-  
-# join iws ag
-# dt <- left_join(dt, ungroup(dplyr::select(mutate(
-#   group_by(lg$iws.lulc, lagoslakeid), 
-#   ag_pct = sum(iws_nlcd2011_pct_81,
-#                            iws_nlcd2011_pct_82, na.rm = TRUE)), 
-#   lagoslakeid, ag_pct))
-#   )
-
-# create hu4 labels
-# centroid_xy <- sf::st_as_text(sf::st_geometry(sf::st_centroid(hu4[,"ZoneID"])))
-# extract_coords <- function(messy_centroid){
-#   res <- stringr::str_split(messy_centroid, "\\(", simplify = TRUE)[2]
-#   res <- stringr::str_split(res, "\\)", simplify = TRUE)[1]
-#   stringr::str_split(res, " ", simplify = TRUE)
-# }
-# coords <- data.frame(matrix(
-#             as.numeric(unlist(lapply(centroid_xy, extract_coords))),
-#             ncol = 2, byrow = TRUE), stringsAsFactors = FALSE)
-# names(coords) <- c("x", "y")
-# coords$ZoneID <- gsub("HU4_", "", hu4[,"ZoneID"]$ZoneID)
-# 
-# gg_smooth <- ggplot(data = dt, 
-#                     aes(x = ag_pct, y = tp, color = hu4_zoneid, alpha = n)) + 
-#     geom_line(stat = "smooth", method = lm, se = FALSE, aes(alpha = n))  +
-#     geom_smooth(aes(group = 1), method = lm, se = FALSE, 
-#                 color = "black", linetype = "dashed") +
-#     # geom_abline(slope = 1.55, intercept = -19.86, color = "red") +
-#     # scale_y_log10() + scale_x_log10() +
-#     theme(legend.position = "") +
-#     labs(x = "Ag. LULC (pct, NLCD 2011)", 
-#          y = "TP")  +
-#     scale_y_continuous(breaks = seq(0, 250, by = 50), limits = c(0, 300))
-#     
-# plot_grid(gg_hu4_n, gg_hu4_ndep)
-``` 
-```{r prediction_lines, echo=FALSE, eval=FALSE}
-# plot prediction lines
-# corn vs tn
-
-# hu4_signif$ZoneID
-dt        <- readRDS("../data/dt_scaled.rds") 
-names(dt) <- gsub("_", "v", names(dt))
-
-hu4_id               <- unique(dt$hu4vzoneid)
-conditions           <- data.frame(hu4vzoneid = hu4_id)
-rownames(conditions) <- hu4_id
-
-me_zone <- marginal_effects(fit_tn, conditions = conditions, 
-                            re_formula = NULL, method = "predict")
-plot(me_zone, points = TRUE)
-
-n_predict <- 3
-reps      <- length(unique(dt$hu4vzoneid)) / 3
-reps      <- 2
-new_data <- data.frame(
-      maxdepth = rep(modelr::seq_range(dt$maxdepth, n = n_predict), reps), 
-      soilvorgvcarbon = rep(modelr::seq_range(dt$maxdepth, n = n_predict), reps), 
-      nitrogenvfertilizervuse = rep(modelr::seq_range(dt$nitrogenvfertilizervuse, 
-                                                  n = n_predict), reps), 
-      buffervcultivatedvcrops = rep(modelr::seq_range(dt$buffervcultivatedvcrops, 
-                                                  n = n_predict), reps), 
-      corn = rep(modelr::seq_range(dt$corn, n = n_predict), reps), 
-      hu4vzoneid = unique(dt$hu4vzoneid)[1:2],
-      stringsAsFactors = FALSE)
-new_data <- expand.grid(new_data)
-
-test <- add_predicted_draws()
-
-test <- predict(fit_tn, newdata = new_data, allow_new_levels = TRUE)
-test2 <- cbind(new_data, test)
-plot(test2$corn, test2$Estimate)
-
-
-ran_ef <- as.data.frame(ranef(fit_tn)$hu4vzoneid) %>%
-  mutate(zoneid = rownames(.)) %>%
-  arrange(desc(Estimate.corn))
-%>%
-  dplyr::filter(zoneid == hu4_id)
-
-# plot(me_zone, ncol = 1)$agvpct # + 
-  # geom_abline(intercept = 0, slope = ran_ef$Estimate.bagvpct_Intercept + 
-  #               broom::tidy(fit)$estimate[3]) + 
-  # ggtitle(hu4_id)
-  
-# ggplot() + 
-#     geom_point(data = dplyr::filter(dt, 
-#                                   hu4vzoneid == hu4_id), 
-#              aes(x = agvpct, y = tp)) + 
-#   geom_abline(intercept = 0, slope = ran_ef$Estimate.bagvpct_Intercept + 
-#                 broom::tidy(fit)$estimate[3]) +
-#   ylim(0, 450) + xlim(40, 90) + ggtitle(hu4_id)
-
-dplyr::filter(dt, hu4vzoneid %in% signif_hu4$ZoneID) %>%
-  modelr::data_grid(corn = modelr::seq_range(corn, n = 101), 
-                    maxdepth = modelr::seq_range(corn, n = 101), 
-                    soilvorgvcarbon = modelr::seq_range(soilvorgvcarbon, n = 101), 
-                    nitrogenvfertilizervuse = modelr::seq_range(nitrogenvfertilizervuse, n = 101), 
-                    buffervcultivatedvcrops = modelr::seq_range(buffervcultivatedvcrops, n = 101), 
-                    hu4vzoneid) %>%
-  tidybayes::add_predicted_draws(fit_tn) %>%
-  ggplot(aes(x = corn, y = tn)) +
-  stat_lineribbon(aes(y = .prediction), 
-                  .width = c(.99, .95, .8, .5), color = "#08519C") +
-  geom_point(data = dplyr::filter(dt, hu4vzoneid %in% hu4_signif$ZoneID), 
-                                  size = 2) +
-  scale_fill_brewer() +
-  facet_wrap(~ hu4vzoneid)
-
-```
-
-
-```{r residual_dotplot, echo=FALSE, eval=FALSE}
-suppressMessages(library(tidybayes))
-suppressMessages(library(brms))
-
-lg <- lagosne_load("1.087.1")
-
-fit <- readRDS("../data/mcmc/re/tn_corn")
-
-dt        <- readRDS("../data/dt_scaled.rds") 
-names(dt) <- gsub("_", "v", names(dt))
-
-good_hu4s <- readRDS("../data/dt.rds") %>%
-  group_by(hu4_zoneid) %>% 
-  tally() %>%
-  dplyr::filter(n >= 3)
-dt <- dplyr::filter(dt, hu4vzoneid %in% good_hu4s$hu4_zoneid)
-
-get_residuals <- function(model, threshold = 0.1){
-  # model <- fit
-  model$res_med <- dt %>%
-    add_residual_draws(model) %>%
-    group_by(lagoslakeid) %>%
-    summarize(.residual_median = median(.residual)) %>%
-    left_join(dplyr::select(lg$locus, lagoslakeid, nhd_lat, nhd_long),
-              by = "lagoslakeid")
-
-  model$res_med <- dt %>%
-    add_fitted_draws(model) %>%
-    group_by(lagoslakeid) %>%
-    summarize(.value_median = median(.value)) %>%
-    right_join(model$res_med, by = "lagoslakeid")
-
-  model$res_test <- abs(
-    median(model$res_med$.residual_median, na.rm = TRUE)) < threshold
-  model
-}
-lg <- lagosne_load("1.087.1")
-fit <- get_residuals(fit)
-
-states_lg <- state_sf()[
-  unlist(lapply(
-    st_intersects(state_sf(), LAGOSNE::coordinatize(fit$res_med)),
-    function(x) length(x) > 0)),]
-
-ggplot() + 
-  geom_sf(data = states_lg) +
-  geom_sf(data = LAGOSNE::coordinatize(fit$res_med), 
-          aes(color = .residual_median), size = 0.8) +
-  coord_sf(datum = NA) +
-  theme_void() + 
-  scale_color_gradient2() +
-  labs(color = "tn_corn \n model residuals")
-
-```
-
-```{r model_fitting, echo=FALSE, eval=FALSE}
-library(brms)
-library(tidybayes)
-library(modelr)
-
-brm_fit <- function(destfile, formula, data){
-  fit <- brm(formula = formula, data = data, 
-             family = gaussian())
-  saveRDS(fit, destfile)
-  return(fit)
-}
-
-# linear
-model_form <- bf(tp ~ ag)
-# unlink("../data/mcmc/fit0.rds")
-fit0 <- get_if_not_exists(brm_fit, "../data/mcmc/fit0.rds", formula = model_form, 
-                            data = dt)
-print("fixed effect")
-print(fit0$formula)
-
-# linear re
-model_form <- bf(tp ~ (1 + ag | hu4vzoneid))
-# unlink("../data/mcmc/fit.rds")
-fit <- get_if_not_exists(brm_fit, "../data/mcmc/fit.rds", formula = model_form, 
-                         data = dt)
-# plot(fit)
-# print(fit$formula)
-
-# linear re with focal predictor
-model_form <- bf(tp ~ maxdepth + (1 + ag | hu4vzoneid))
-# unlink("../data/mcmc/fit1.rds")
-fit1 <- get_if_not_exists(brm_fit, "../data/mcmc/fit1.rds", formula = model_form, 
-                         data = dt)
-# plot(fit1)
-# print(fit$formula)
-
-model_form <- bf(tp ~ hu12vbaseflowvmean +
-                   (1 + ag | hu4vzoneid))
-# unlink("../data/mcmc/fit2.rds")
-fit2 <- get_if_not_exists(brm_fit, "../data/mcmc/fit2.rds", formula = model_form,
-                         data = dt)
-
-
-# linear re with multivariate focal predictor
-model_form <- bf(tp ~ maxdepth + iwslavratio + hu12vbaseflowvmean +
-                   (1 + ag | hu4vzoneid))
-# unlink("../data/mcmc/fit3.rds")
-fit3 <- get_if_not_exists(brm_fit, "../data/mcmc/fit3.rds", formula = model_form, 
-                         data = dt)
-
-
-model_form <- bf(tp ~ maxdepth + iwslavratio + hu12vbaseflowvmean +
-                   (1 + soybeans | hu4vzoneid))
-# unlink("../data/mcmc/fit4.rds")
-fit4 <- get_if_not_exists(brm_fit, "../data/mcmc/fit4.rds", formula = model_form, 
-                         data = dt)
-
-model_form <- bf(tp ~ maxdepth + iwslavratio + hu12vbaseflowvmean + soybeans)
-# unlink("../data/mcmc/fit5.rds")
-fit5 <- get_if_not_exists(brm_fit, "../data/mcmc/fit5.rds", formula = model_form, 
-                         data = dt)
-
-loo_compare(loo(fit4), loo(fit5))
-
-
-quantile(ranef(fit4)$hu4vzoneid[,,2], c(0, 0.05, 0.5, 0.95, 1))
-plot(fit4)
-
-brms::bayes_R2(fit2)
-brms::bayes_R2(fit3)
-brms::bayes_R2(fit4)
-
-range(dt$iwslavratio)
-
-range((dt$iwslavratio - mean(dt$iwslavratio)) / sd(dt$iwslavratio))
-hist((dt$iwslavratio - mean(dt$iwslavratio)) / sd(dt$iwslavratio))
-test <- dt %>% mutate_if(function(col) is.numeric(col) & 
-                    !all(col == .$lagoslakeid) &
-                    !all(col == .$hu4vzoneid), scale)
-
-
-# non-linear re
-model_form <- bf(tp ~ bagvpct * ag, 
-                 bagvpct ~ 1 + 
-                   (1|hu4vzoneid), 
-                 nl = TRUE)
-fit1 <- get_if_not_exists(brm_fit, "../data/mcmc/fit1.rds", formula = model_form, 
-                          data = dt)
-# plot(fit1)
-print("random effects")
-print(fit1$formula)
-
-# non-linear re w/ 2nd level coeffs
-model_form2 <- bf(tp ~ bagvpct * ag, 
-                 bagvpct ~ 1 + phosphorusvfertilizervuse + soybeans +
-                   (1|hu4vzoneid), 
-                 nl = TRUE)
-fit_nle <- get_if_not_exists(brm_fit, "../data/mcmc/fit_nle.rds", formula = model_form2, 
-                          data = dt)
-print("re w/ 2nd level coeffs")
-print(fit_nle$formula)
-
-```
-
-```{r model_diagnostics_basics, echo=FALSE, fig.height=2, eval=FALSE}
-# get_variables(fit0)
-plot(fit0, pars = "ag")
-```
-
-```{r model_diagnostics_advanced, fig.height=4, echo=FALSE, eval=FALSE}
-# pull global distribution (lower, mean, upper)
-# get_variables(fit0)
-global_dist <- spread_draws(fit0, b_ag) %>%
-    mutate(hu4vzoneid = "global") %>%
-    group_by(hu4vzoneid) %>%
-    do(tibble::as_tibble(t(quantile(.$b_ag, c(0.05, 0.5, 0.95)))))
-
-# pull hu4 distribution (lower, mean, upper)
-hu4_dist <- spread_draws(fit, r_hu4vzoneid[hu4vzoneid,term]) %>%
-  dplyr::filter(term == "ag") %>%
-  group_by(hu4vzoneid) %>%
-  do(tibble::as_tibble(t(quantile(.$r_hu4vzoneid, c(0.05, 0.5, 0.95))))) %>%
-  mutate(signif = case_when(`5%` > 0 ~ TRUE))
-
-all_dist <- bind_rows(global_dist, hu4_dist)
-
-ggplot(data = all_dist) +
-  geom_pointrange(aes(x = hu4vzoneid, y = `50%`, 
-                      ymin = `5%`, ymax = `95%`, color = signif)) +
-  geom_hline(yintercept = 0) +
-  coord_flip()
-
-# STOP
-hu4_signif <-  LAGOSNEgis::query_gis(
-  "HU4", "ZoneID", dplyr::filter(hu4_dist, signif)$hu4vzoneid) %>% 
-  st_cast(to = "MULTIPOLYGON")
-```
-
-```{r signif_map, echo=FALSE, eval=FALSE}
-ggplot() + 
-  geom_sf(data = hu4) +
-  geom_sf(data = hu4_signif, color = "red")
-```
-
-```{r model_summary, echo=FALSE, fig.height=3, eval=FALSE}
-
-# pull 2nd level covariate distributions
-coef_signif <- bind_rows(
-  spread_draws(fit_nle, b_bagvpct_soybeans) %>%
-    do(tibble::as_tibble(t(quantile(.$b_bagvpct_soybeans, 
-                                    c(0.05, 0.5, 0.95))))), 
-  spread_draws(fit_nle, b_bagvpct_phosphorusvfertilizervuse) %>%
-    do(tibble::as_tibble(t(quantile(.$b_bagvpct_phosphorusvfertilizervuse, 
-                                    c(0.05, 0.5, 0.95)))))
-  )
-coef_signif$var <- c("soybeans", "pfertilizer")
-
-ggplot(data = coef_signif) +
-  geom_pointrange(aes(x = var, y = `50%`, ymin = `5%`, ymax = `95%`)) +
-  geom_hline(yintercept = 0, linetype = "dashed") +
-  coord_flip()
-
-```
-
-```{r asdf, echo=FALSE, eval=FALSE}
-
-# plot prediction lines
-# hu4_signif$ZoneID
-hu4_id               <- hu4_signif$ZoneID[2]
-conditions           <- data.frame(hu4vzoneid = hu4_id)
-rownames(conditions) <- hu4_id
-
-me_zone <- marginal_effects(fit1, conditions = conditions, 
-                            re_formula = NULL, method = "predict")
-
-ran_ef <- as.data.frame(ranef(fit1)$hu4vzoneid) %>%
-  mutate(zoneid = rownames(.)) %>%
-  dplyr::filter(zoneid == hu4_id)
-
-# plot(me_zone, ncol = 1)$agvpct # + 
-  # geom_abline(intercept = 0, slope = ran_ef$Estimate.bagvpct_Intercept + 
-  #               broom::tidy(fit)$estimate[3]) + 
-  # ggtitle(hu4_id)
-  
-# ggplot() + 
-#     geom_point(data = dplyr::filter(dt, 
-#                                   hu4vzoneid == hu4_id), 
-#              aes(x = agvpct, y = tp)) + 
-#   geom_abline(intercept = 0, slope = ran_ef$Estimate.bagvpct_Intercept + 
-#                 broom::tidy(fit)$estimate[3]) +
-#   ylim(0, 450) + xlim(40, 90) + ggtitle(hu4_id)
-
-dplyr::filter(dt, hu4vzoneid %in% hu4_signif$ZoneID) %>%
-  modelr::data_grid(ag = seq_range(ag, n = 101), hu4vzoneid) %>%
-  add_predicted_draws(fit) %>%
-  ggplot(aes(x = ag, y = tp)) +
-  stat_lineribbon(aes(y = .prediction), .width = c(.99, .95, .8, .5), color = "#08519C") +
-  geom_point(data = dplyr::filter(dt, hu4vzoneid %in% hu4_signif$ZoneID), 
-                                  size = 2) +
-  scale_fill_brewer() +
-  facet_wrap(~ hu4vzoneid)
-
-```
-
-```{r not_signif, echo=FALSE, eval=FALSE}
-hu4_not_signif_n <- sample(unique(
-  pull(
-    dplyr::filter(dt, !(hu4vzoneid %in% hu4_signif$ZoneID)),
-    hu4vzoneid)), 5)
-
-dplyr::filter(dt, hu4vzoneid %in% hu4_not_signif_n) %>%
-  modelr::data_grid(ag = seq_range(ag, n = 101), hu4vzoneid) %>%
-  add_predicted_draws(fit) %>%
-  ggplot(aes(x = ag, y = tp)) +
-  stat_lineribbon(aes(y = .prediction), .width = c(.99, .95, .8, .5), color = "#08519C") +
-  geom_point(data = dplyr::filter(dt, hu4vzoneid %in% hu4_not_signif_n), 
-                                  size = 2) +
-  scale_fill_brewer() +
-  facet_wrap(~ hu4vzoneid)
-
-# loo significance testing
-loo  <- loo(fit)
-loo0 <- loo(fit0)
-loo1 <- loo(fit1)
-loo2 <- loo(fit2)
-loo_compare(loo0, loo1)
-loo_compare(loo1, loo2)
 ```
