--- a/manuscript/appendix.Rmd
+++ b/manuscript/appendix.Rmd
@@ -143,6 +143,27 @@ test <- readRDS("../data/dt.rds") %>%
 
 \pagebreak
 
+## Fixed effects dotplots of non lulc models and nutrient only models
+
+```{r re-comparison-1, fig.cap = "Population level effect of watershed land-use cover on lake TP and TN. Values shown are posterior medians (filled circles) and 95% credible intervals (solid lines). Also shown is a comparison to a zero effect (dashed line).", warning=FALSE, echo = FALSE}
+knitr::include_graphics("../figures/re-comparison_40-1.pdf")
+```
+
+```{r fe-1, fig.cap = "Global (fixed effect) coefficient values and credible intervals for best-fit lake TP and TN models. Values that do not overlap zero are shaded in red. Horizontal bars separate coefficients in distinct predictor categories. Coefficient estimates are reported relative to standardized predictor variables centered at zero with unit variance.", warning=FALSE, echo = FALSE}
+knitr::include_graphics("../figures/fe_40-1.pdf")
+```
+
+```{r re-1, fig.cap = "Regionally varying effect of watershed land-use cover for best-fit lake TP and TN models. Lines shown are 95% credible intervals with median marked by a filled circle. Values that do not overlap the population level estimate are shaded in red.", warning=FALSE, echo = FALSE}
+knitr::include_graphics("../figures/re_40-1.pdf")
+```
+\pagebreak
+
+```{r fe-1, fig.cap = "Global (fixed effect) coefficient values and credible intervals for best-fit lake TP and TN models. Values that do not overlap zero are shaded in red. Horizontal bars separate coefficients in distinct predictor categories. Coefficient estimates are reported relative to standardized predictor variables centered at zero with unit variance.", warning=FALSE, echo = FALSE}
+knitr::include_graphics("../figures/fe_nolulc-1.pdf")
+```
+
+\pagebreak
+
 ## Bivariate relationships among predictors and lake nutrients
 
 We examined bivariate relationships between lake nutrient concentrations and predictors to determine, at least to first-approximation, the likely drivers of lake nutrients (Figure 2). 
