--- a/figures/07_model-selection.Rmd
+++ b/figures/07_model-selection.Rmd
@@ -209,7 +209,8 @@ study_bbox    <- st_read("../data/gis.gpkg", "study_bbox", quiet = TRUE)[3,]
 states_all    <- st_read("../data/gis.gpkg", "states_all", quiet = TRUE)
 hu4_all       <- st_read("../data/gis.gpkg", "hu4s_focal", quiet = TRUE)
 hu4_all       <- st_crop(hu4_all, st_transform(study_bbox, st_crs(hu4_all)))
-
+hu4_all       <- rmapshaper::ms_simplify(hu4_all)
+  
 # map significant random effects hu4s
 gg_hu4 <- 
   ggplot() +
