--- a/manuscript/appendix.Rmd
+++ b/manuscript/appendix.Rmd
@@ -143,7 +143,7 @@ test <- readRDS("../data/dt.rds") %>%
 
 \pagebreak
 
-## Fixed effects dotplots of non lulc models and nutrient only models
+## Model results when lake are restricted to > 40% watershed agriculture
 
 ```{r re-comparison_40-1, fig.cap = "Population level effect of watershed land-use cover on lake TP and TN for lakes with greater than 40% watershed agricultural land-use. Values shown are posterior medians (filled circles) and 95% credible intervals (solid lines). Also shown is a comparison to a zero effect (dashed line).", warning=FALSE, echo = FALSE}
 knitr::include_graphics("../figures/re-comparison_40-1.pdf")
@@ -157,6 +157,8 @@ knitr::include_graphics("../figures/fe_40-1.pdf")
 knitr::include_graphics("../figures/re_40-1.pdf")
 ```
 \pagebreak
+
+## Model results when land-use predictors are excluded
 
 ```{r fe_nolulc-1, fig.cap = "Global (fixed effect) coefficient values and credible intervals for best-fit lake TP and TN models without a land-use predictor. Values that do not overlap zero are shaded in red. Horizontal bars separate coefficients in distinct predictor categories. Coefficient estimates are reported relative to standardized predictor variables centered at zero with unit variance.", warning=FALSE, echo = FALSE}
 knitr::include_graphics("../figures/fe_nolulc-1.pdf")
